# task-engine-py

./: .gitignore  LICENSE  example.py  readme.md  run_examples.py
engine/: __init__.py  pipeline_executor.py  task.py  task_decorators.py
examples/: __init__.py  config.yml  requirements.txt
examples/jobs/: __init__.py
examples/jobs/job_1/: __init__.py
examples/jobs/job_2/: __init__.py
examples/task-context/: __init__.py
examples/tasks/: __init__.py
examples/wait-for-resource/: __init__.py
reporters/: __init__.py
src/: pyproject.toml
src/engine/: __init__.py  pipeline_executor.py  task.py  task_decorators.py
src/engine/config_provider/: __init__.py  yml_config_provider.py
